# auxl-grpc-lib

./: .gitignore  .gitmodules  Makefile  Makefile.am  Makefile.in  README.md  _Makefile  config.h  config.h.in  configure  configure.ac  descriptor.json  generate-reflection-support.sh  grpc_opts.json  message.json  outp.json
auxl-grpc.xcodeproj/: project.pbxproj
auxl-grpc.xcodeproj/xcshareddata/xcschemes/: auxl_grpc_test.xcscheme
src/: auxl_cli.cpp  auxl_grpc.h  auxl_grpc_parser.cpp  auxl_grpc_parser.h  connection.cpp  connection.h  connection.hpp  convertor.cpp  convertor.h  descriptor.cpp  descriptor.hpp  descriptor_session_delegate.cpp  descriptor_session_delegate.hpp  error_collector.c  error_collector.h  options.c  options.h  parser.cpp  parser.h  parser.hpp  session.cpp  session.h  session.hpp  template.cpp  template.h  tool.cpp  tool.h  types.h  util.cpp  util.h  util.hpp
src/cli/: auxl_grpc_cli.cpp  cli_session_delegate.hpp  cli_util.cpp  cli_util.hpp
src/grpc/: insecure_certificate_provider.h
test/: auxl_client_test.cpp  auxl_extern_test.cpp  auxl_main_test.cpp  auxl_ssl_test.cpp  test_defines.h  test_session_delegate.hpp
test/test_resources/: connection_config.json  connection_opts_test.json  descriptor_local.json  greet.proto  hello_request_message.json  hello_request_message_1.json  hello_request_message_2.json
